# refacto

./: CMakeLists.txt  README.md
include/: directory.h  refactorer.h
src/: CMakeLists.txt  directory.cpp  main.cpp  refactorer.cpp
test/: testing.h
